fix adaptive layout bugs

--- a/source/scss/_blocks/header.scss
+++ b/source/scss/_blocks/header.scss
@@ -105,14 +105,14 @@
       right: 0; 
       width: 100%;
       height: 100vh;
-      z-index: 9;
+      z-index: 25;
       background: rgba(125, 151, 218, 0.8);
   }
   &__burger {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 10;
+    z-index: 15;
     background-color:$white;
     animation: open-burger-menu linear 0.5s; 
   }
